--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,83 +1,70 @@
-.content 
-  %br
-    = image_tag(@user.avatar.url(:thumb), class: 'img-circle')
-  .col-sm-1
+.user_avatar
+  = image_tag(@user.avatar.url(:medium))
+  .user_edit
+    = link_to "Edit profile", edit_user_path(current_user), class: "btn btn-confirm user_edit"
+.user_info
+  .col-1
     Name:
-  .col-sm-3
+  .col-2
     = @user.name
-  %br
-  .col-sm-1
+  .col-1
     Surname:
-  .col-sm-3
+  .col-2
     = @user.surname
-  %br
-  .col-sm-1
+  .col-1
     Email:
-  .col-sm-3
+  .col-2
     = @user.email
-  %br
-  .col-sm-1
+  .col-1
     Birthday:
-  .col-sm-3
+  .col-2
     = @user.bday
-  %br
-  .col-sm-1
+  .col-1
     Gender:
-  .col-sm-3
+  .col-2
     = @user.gender
-  %br
-  .col-sm-1
+  .col-1
     Country:
-  .col-sm-3
+  .col-2
     = @user.country_
-  %br
-  .col-sm-1
+  .col-1
     City:
-  .col-sm-3
+  .col-2
     = @user.city_
-  %br
-  .col-sm-1
+  .col-1
     Phone:
-  .col-sm-3
+  .col-2
     = @user.phone
-  %br
-  .col-sm-1
+  .col-1
     Hobby:
-  .col-sm-3
+  .col-2.text_area
     = @user.hobby
-  %br
-  .col-sm-1
+  .col-1
     About:
-  .col-sm-3
+  .col-2.text_area
     = @user.about
-  %br
-  .col-sm-1
+  .col-1
     Tags:
   - if @user.tags.empty?
     No tags
   - else
-    .col-sm-3
+    .col-2
       - @user.tags.each do |t|
         = t.name
-  %br
-  %br
-  %br
-  = link_to "Edit profile", edit_user_path(current_user), class: "btn btn-confirm"
-  .sub_header
-    Your events
-  %table.event_list
-    %tr{:align => "center"}
-      %th Name:
-      %th Gender:
-      %th Type:
-      %th Description:
-    - @events.each do |e|
-      %tr{:align => "center"}
-        %td= link_to e.name, event_path(e)
-        %td= e.gender
-        %td
-          - e.tags.each do |t|
-            =t.name
-        %td= e.description
-        %td= link_to "unfollow", unfollow_event_path(e)
+.divider
+.sub_header
+  Your events
+- @events.each do |e|
+  .event_el
+    .event_name
+      = link_to e.name, event_path(e)
+    .event_date
+      = e.date
+      = e.time.strftime("%H:%M")
+    .event_desc
+      = e.description
+    .event_img
+      = image_tag(e.photo.url(:thumb))
+.pagin_box
   = paginate @events
+.divider_f
